## Process this file with automake to produce Makefile.in

dtddir = $(datadir)/glabels/dtd

dtd_DATA = \
	glabels-2.2.dtd

templatesdir = $(datadir)/glabels/templates

templates_DATA = \
	paper-sizes.xml \
	categories.xml \
	vendors.xml \
	avery-us-templates.xml \
	avery-iso-templates.xml \
	avery-other-templates.xml \
	zweckform-iso-templates.xml \
	brother-other-templates.xml \
	dymo-other-templates.xml \
	misc-us-templates.xml \
	misc-iso-templates.xml \
	misc-other-templates.xml

EXTRA_DIST = $(templates_DATA) $(dtd_DATA)


