## Process this file with automake to produce Makefile.in

dtddir = $(datadir)/$(LIBGLABELS_BRANCH)/dtd

dtd_DATA = \
	glabels-2.3.dtd

templatesdir = $(datadir)/$(LIBGLABELS_BRANCH)/templates

templates_DATA = \
	paper-sizes.xml \
	categories.xml \
	vendors.xml \
	avery-us-templates.xml \
	avery-iso-templates.xml \
	avery-other-templates.xml \
	brother-other-templates.xml \
	dymo-other-templates.xml \
	jac-iso-templates.xml \
	maco-us-templates.xml \
	misc-us-templates.xml \
	misc-iso-templates.xml \
	misc-other-templates.xml \
	pearl-iso-templates.xml \
	uline-us-templates.xml \
	worldlabel-us-templates.xml \
	zweckform-iso-templates.xml

EXTRA_DIST = $(templates_DATA) $(dtd_DATA)


