## Process this file with automake to produce Makefile.in

dtddir = $(datadir)/$(LIBGLABELS_BRANCH)/dtd

dtd_DATA = \
	glabels-3.0.dtd

templatesdir = $(datadir)/$(LIBGLABELS_BRANCH)/templates

templates_DATA = \
	paper-sizes.xml \
	categories.xml \
	vendors.xml \
	ascom-iso-templates.xml	\
	avery-us-templates.xml \
	avery-iso-templates.xml \
	avery-other-templates.xml \
	brother-other-templates.xml \
	databecker-iso-templates.xml \
	dataline-iso-templates.xml	\
	decadry-iso-templates.xml \
	dymo-other-templates.xml \
	geha-iso-templates.xml	\
	hama-iso-templates.xml	\
	herma-iso-templates.xml \
	jac-iso-templates.xml \
	maco-us-templates.xml \
	meritline-us-templates.xml \
	misc-us-templates.xml \
	misc-iso-templates.xml \
	misc-other-templates.xml \
	pearl-iso-templates.xml \
	uline-us-templates.xml \
	worldlabel-us-templates.xml \
	zweckform-iso-templates.xml

EXTRA_DIST = $(templates_DATA) $(dtd_DATA)


