## Process this file with automake to produce Makefile.in

builderdir = $(datadir)/glabels/builder/

builder_DATA = \
	property-bar.builder		\
	print-op-dialog-custom-widget.builder	\
	media-select.builder		\
	merge-properties-dialog.builder	\
	template-designer.builder	\
	prefs-dialog.builder		\
	object-editor.builder

EXTRA_DIST = $(builder_DATA)
