## Process this file with automake to produce Makefile.in

glabels_pixmapsdir = $(datadir)/$(GLABELS_BRANCH)/pixmaps

glabels_pixmaps_DATA = \
	glabels-splash.png	\
	glabels-about-logo.png	\
	ex-rect-size.png	\
	ex-round-size.png	\
	ex-cd-size.png		\
	ex-1layout.png		\
	ex-2layouts.png		

glabels_app_icondir = $(datadir)/pixmaps

glabels_app_icon_DATA = \
	glabels.png

glabels_mime_icondir = $(datadir)/pixmaps

glabels_mime_icon_DATA = \
	glabels-application-x-glabels.png

EXTRA_DIST = $(glabels_pixmaps_DATA)   \
	     $(glabels_app_icon_DATA)  \
	     $(glabels_mime_icon_DATA)
