## Process this file with automake to produce Makefile.in

glabels_pixmapsdir = $(datadir)/$(GLABELS_BRANCH)/pixmaps

glabels_pixmaps_DATA = \
	glabels-logo.png	\
	new-select.png		\
	new-rotate.png		\
	new-confirm.png		\
	ex-rect-size.png	\
	ex-round-size.png	\
	ex-cd-size.png		\
	ex-1layout.png		\
	ex-2layouts.png		

glabels_app_icondir = $(datadir)/pixmaps

glabels_mime_icondir = $(datadir)/icons/hicolor/48x48/mimetypes

glabels_mime_icon_DATA = \
	application-x-glabels.png

EXTRA_DIST = $(glabels_pixmaps_DATA)   \
	     $(glabels_mime_icon_DATA)
