## Process this file with automake to produce Makefile.in

glabels_pixmapsdir = $(datadir)/$(GLABELS_BRANCH)/pixmaps

glabels_pixmaps_DATA = \
	glabels-logo.png	\
	new-select.png		\
	new-rotate.png		\
	new-confirm.png		\
	template-designer.png	\
	ex-rect-size.png	\
	ex-ellipse-size.png	\
	ex-round-size.png	\
	ex-cd-size.png		\
	ex-1layout.png		\
	ex-2layouts.png		

EXTRA_DIST = $(glabels_pixmaps_DATA)
