## Process this file with automake to produce Makefile.in

templatesdir = $(datadir)/glabels/templates

templates_DATA = \
	paper-sizes.xml \
	categories.xml \
	avery-iso-templates.xml \
	avery-other-templates.xml \
	avery-us-templates.xml \
	brother-other-templates.xml \
	dymo-other-templates.xml \
	misc-iso-templates.xml \
	misc-other-templates.xml \
	misc-us-templates.xml \
	pearl-templates.xml \
	zweckform-iso-templates.xml

EXTRA_DIST = $(templates_DATA)

