## Process this file with automake to produce Makefile.in

builderdir = $(datadir)/$(GLABELS_BRANCH)/ui/

builder_DATA = \
	property-bar.ui				\
	print-op-dialog-custom-widget.ui	\
	media-select.ui				\
	new-label-dialog.ui			\
	merge-properties-dialog.ui		\
	template-designer.ui			\
	prefs-dialog.ui				\
	object-editor.ui			\
	label-properties-dialog.ui

EXTRA_DIST = $(builder_DATA)
