INCLUDES = \
	$(GLABELS_CFLAGS)


BC_FILES =		\
	library.c	\
	ean.c		\
	code128.c	\
	code39.c	\
	code93.c	\
	i25.c		\
	msi.c		\
	plessey.c	\
	codabar.c	\
	ps.c		\
	pcl.c		\
	barcode.h	

noinst_LTLIBRARIES = libbarcode.la

libbarcode_la_SOURCES = $(BC_FILES)

EXTRA_DIST =			\
	barcode.spec		\
	ChangeLog		\
	cmdline.c		\
	cmdline.h		\
	configure		\
	configure.in.dist	\
	COPYING			\
	INSTALL			\
	install-sh		\
	main.c			\
	Makefile.in.dist	\
	missing			\
	mkinstalldirs		\
	README			\
	README.glabels		\
	sample.c		\
	TODO			\
	bookland/bookland.py	\
	compat/getopt.c		\
	compat/getopt.h		\
	contrib/barcode-for-delphi.tar.gz		\
	contrib/barcode-SVG.tar.gz.README		\
	contrib/barcode-for-delphi.tar.gz.README	\
	contrib/barcodeps-0.1.tgz			\
	contrib/grab-0.0.4.tar.gz			\
	contrib/barcodeps-0.1.tgz.README		\
	contrib/grab-0.0.4.tar.gz.README		\
	contrib/barcode-SVG.tar.gz			\
	debian/changelog		\
	debian/control			\
	debian/copyright		\
	debian/dirs			\
	debian/info			\
	debian/README.debian		\
	debian/rules			\
	doc/barcodedoc.txt		\
	doc/barcode.ps		\
	doc/infofilter		\
	doc/manpager		\
	doc/texi2html		\
	doc/barcode.info	\
	doc/mktxt		\
	doc/barcode.pdf		\
	doc/doc.barcode		\
	doc/Makefile.in		\
	doc/README




