INCLUDES = \
	-DLIB \
	$(GLABELS_CFLAGS)


IEC_FILES =			\
	iec16022ecc200.c	\
	reedsol.c

noinst_LTLIBRARIES = libiec16022.la

libiec16022_la_SOURCES = $(IEC_FILES)

EXTRA_DIST =			\
	BUGS			\
	CHANGELOG		\
	CREDITS			\
	iec16022.1		\
	iec16022.c		\
	iec16022ecc200.h	\
	image.c			\
	image.h			\
	INSTALL			\
	LICENSE			\
	Makefile.dist		\
	README			\
	README.glabels		\
	reedsol.h		\
	TODO			\
	test/testsuite-example.bin	\
	test/testsuite-example.eps	\
	test/testsuite-example.hex	\
	test/testsuite-example.png	\
	test/testsuite-example.text	\
	test/testsuite.sh
