## Process this file with automake to produce Makefile.in

glabels_pixmapsdir = $(datadir)/pixmaps/glabels

glabels_pixmaps_DATA = \
	glabels-icon.png	\
	glabels-logo.png	\
	glabels-about-logo.png	\
	ex-1layout.png		\
	ex-2layouts.png

glabels_mime_icondir = $(datadir)/pixmaps

glabels_mime_icon_DATA = glabels.png

EXTRA_DIST = $(glabels_pixmaps_DATA) \
	     $(glabels_mime_icon_DATA)
