INCLUDES = \
	$(GLABELS_CFLAGS)

QR_ENCODE_FILES =		\
	qrencode.c		\
	qrencode.h		\
	qrencode_inner.h	\
	qrinput.c		\
	qrinput.h		\
	bitstream.c		\
	bitstream.h		\
	qrspec.c		\
	qrspec.h		\
	rscode.c		\
	rscode.h		\
	split.c			\
	split.h			\
	mask.c			\
	mask.h


noinst_LTLIBRARIES = libqrencode.la

libqrencode_la_SOURCES = $(QR_ENCODE_FILES)

EXTRA_DIST = 			\
	acinclude.m4		\
	autogen.sh 		\
	configure.ac.dist	\
	ChangeLog		\
	COPYING			\
	Doxyfile 		\
	libqrencode.pc.in	\
	Makefile.am 		\
	Makefile.am.dist	\
	Makefile.in.dist	\
	NEWS			\
	qrencode.spec.in 	\
	qrencode.spec 		\
	qrencode.1.in 		\
	README			\
	README.glabels		\
	tests/common.h		\
	tests/create_frame_pattern.c	\
	tests/frame		\
	tests/Makefile.am	\
	tests/Makefile.in	\
	tests/prof_qrencode.c	\
	tests/test_all.sh	\
	tests/test_bitstream.c	\
	tests/test_estimatebit.c	\
	tests/test_monkey.c	\
	tests/test_qrencode.c	\
	tests/test_qrinput.c	\
	tests/test_qrspec.c	\
	tests/test_rs.c		\
	tests/test_split.c	\
	tests/view_qrcode.c	\
	TODO			\
	use/compile		\
	use/config.guess	\
	use/config.sub		\
	use/depcomp		\
	use/install-sh		\
	use/ltmain.sh		\
	use/missing
